# tama_o_mali

./: CMakeLists.txt
include/: exception.hpp  game.hpp  questions.hpp
src/: exception.cpp  game.cpp  main.cpp
